<resources>
    <string name="app_name">ToDo</string>
    <string name="action_settings">Settings</string>
    <string name="todo_add_task">Add task</string>
    <string name="details_priority">Priority</string>
</resources>
