package com.misca.todo.feature.todolist;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import com.misca.todo.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class AddATaskTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void addATaskTest() {
        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.button), withText("Add task"),
                      childAtPosition(
                              childAtPosition(
                                      withId(R.id.main_container),
                                      0),
                              1),
                      isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction view = onView(
                allOf(childAtPosition(
                        childAtPosition(
                                withClassName(is("android.widget.LinearLayout")),
                                1),
                        3),
                      isDisplayed()));
        view.perform(click());

        ViewInteraction appCompatEditText = onView(
                allOf(childAtPosition(
                        childAtPosition(
                                withId(R.id.main_container),
                                1),
                        0),
                      isDisplayed()));
        appCompatEditText.perform(replaceText("as"), closeSoftKeyboard());

        pressBack();

        ViewInteraction appCompatEditText2 = onView(
                allOf(withText("as"),
                      childAtPosition(
                              childAtPosition(
                                      withId(R.id.main_container),
                                      1),
                              0),
                      isDisplayed()));
        appCompatEditText2.perform(replaceText("asd"));

        ViewInteraction appCompatEditText3 = onView(
                allOf(withText("asd"),
                      childAtPosition(
                              childAtPosition(
                                      withId(R.id.main_container),
                                      1),
                              0),
                      isDisplayed()));
        appCompatEditText3.perform(closeSoftKeyboard());

        pressBack();

        pressBack();

        ViewInteraction checkBox = onView(
                allOf(withId(R.id.message),
                      childAtPosition(
                              allOf(withId(R.id.main),
                                    childAtPosition(
                                            withId(R.id.recyclerView),
                                            0)),
                              0),
                      isDisplayed()));
        checkBox.check(matches(isDisplayed()));
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
